Add info about location to notifications
